@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.139 2005/01/05 20:18:05 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.140 2005/01/10 01:05:59 zhen Exp $
+
+  09 Jan 2005; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
+  modules/livecd_stage2_target.py:
+  fix for bug #76146
 
   05 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/runscript-support/livecdfs-update.sh, targets/stage1/stage1.sh:
